Added: 1.css.file 2.Added form to index.html 3.Added print Books option in app.js

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Books</title>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+    <link rel="stylesheet" href="style/style.css">
+    <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
-
+<h2>Moje książki</h2>
+<form method="post">
+    <!--Id<input type="text" id = "id">-->
+    Isbn<input type="number" id = "isbn">
+    Tytuł<input type="text" id="title">
+    Autor<input type="text" id="author">
+    Publisher<input type="text" id="publisher">
+    Type<input type="text" id = "type">
+    <input type="submit" value="Wyślij">
+</form>
 </body>
 </html>
