--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h2>Moje książki</h2>
 <form method="post">
     <!--Id<input type="text" id = "id">-->
+    <input type="hidden" id = "id">
     Isbn<input type="number" id = "isbn">
     Tytuł<input type="text" id="title">
     Autor<input type="text" id="author">
